update the endpoints
